--- a/manager/app/src/main/res/values-pt-rBR/strings.xml
+++ b/manager/app/src/main/res/values-pt-rBR/strings.xml
@@ -19,6 +19,9 @@
     <string name="home_failure">Assinatura KernelSU Next v2 não encontrada no kernel! [ !KSU_NEXT || != size/hash ]</string>
     <string name="home_failure_tip">Peça ao seu desenvolvedor de kernel para integrar o KernelSU Next!</string>
     <string name="home_kernel">Versão do kernel</string>
+    <string name="home_susfs">SuSFS: %s</string>
+    <string name="home_susfs_version">Versão do SuSFS</string>
+    <string name="home_susfs_sus_su">SuS SU</string>
     <string name="home_android">Versão do Android</string>
     <string name="home_manager_version">Versão do gerenciador</string>
     <string name="home_selinux_status">Status do SELinux</string>
@@ -107,7 +110,7 @@
     <string name="settings_umount_modules_default">Desmontar módulos por padrão</string>
     <string name="settings_umount_modules_default_summary">O valor padrão global para \"Desmontar módulos\" em Perfil do Aplicativo. Se ativado, ele removerá todas as modificações do módulo no sistema para apps que não possuem um perfil definido.</string>
     <string name="settings_susfs_toggle">Ocultar ganchos kprobe</string>
-    <string name="settings_susfs_toggle_summary">Desativa os ganchos kprobe feitos pelo ksu e, em vez disso, os ganchos inline não-kprobe serão ativados, da mesma forma que em um kernel não-gki sem suporte a kprobe.</string>
+    <string name="settings_susfs_toggle_summary">Ele desativa os ganchos kprobe criados pelo ksu e, em vez disso, ativa os ganchos embutidos não-kprobe, implementando a mesma funcionalidade que seria aplicada a um kernel não-GKI, que não oferece suporte para kprobe.</string>
     <string name="profile_umount_modules_summary">Ativar esta opção permitirá que o KernelSU Next restaure quaisquer arquivos modificados pelos módulos para este app.</string>
     <string name="profile_selinux_domain">Domínio</string>
     <string name="profile_selinux_rules">Regras</string>
@@ -172,5 +175,5 @@
     <string name="selected_lkm">LKM selecionado: %s</string>
     <string name="save_log">Salvar registros</string>
     <string name="log_saved">Registros salvos</string>
-    <string name="send_log">Reportar registros</string>
+    <string name="send_log">Compartilhar registros</string>
 </resources>
