--- a/manager/app/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/app/src/main/res/values-zh-rCN/strings.xml
@@ -19,6 +19,9 @@
     <string name="home_failure">内核中未找到 KernelSU Next V2 签名！ [ !KSU_NEXT || != size/hash ]</string>
     <string name="home_failure_tip">请让你的内核开发人员集成 KernelSU Next！</string>
     <string name="home_kernel">内核版本</string>
+    <string name="home_susfs">SuSFS：%s</string>
+    <string name="home_susfs_version">SuSFS 版本</string>
+    <string name="home_susfs_sus_su">SuS SU</string>
     <string name="home_android">安卓版本</string>
     <string name="home_manager_version">管理器版本</string>
     <string name="home_selinux_status">SELinux 状态</string>
@@ -106,8 +109,8 @@
     <string name="require_kernel_version">当前 KernelSU Next 版本 %d 过低，管理器无法正常工作，请升级内核 KernelSU Next 版本至 %d 或以上！</string>
     <string name="settings_umount_modules_default">默认卸载模块</string>
     <string name="settings_umount_modules_default_summary">App Profile 中“卸载模块”的全局默认值，如果启用，将会为没有设置 Profile 的应用移除所有模块针对系统的修改。</string>
-    <string name="settings_susfs_toggle">隐藏kprobe钩子</string>
-    <string name="settings_susfs_toggle_summary">它禁用由ksu创建的kprobe钩子，取而代之的是启用非kprobe内联钩子，类似于不支持kprobe的non-gki内核的实现。</string>
+    <string name="settings_susfs_toggle">隐藏 Kprobe 钩子</string>
+    <string name="settings_susfs_toggle_summary">禁用由 KSU 创建的 Kprobe 钩子，并使用非 Kprobe 内联钩子代替，实现方式类似于不支持 Kprobe 的非 GKI 内核。</string>
     <string name="profile_umount_modules_summary">启用后将允许 KernelSU Next 为本应用还原被模块修改过的文件。</string>
     <string name="profile_selinux_domain">域</string>
     <string name="profile_selinux_rules">规则</string>
