--- a/manager/app/src/main/res/values-ru/strings.xml
+++ b/manager/app/src/main/res/values-ru/strings.xml
@@ -14,7 +14,7 @@
     <string name="home_click_to_install">Нажмите, чтобы установить</string>
     <string name="home_working">Работает</string>
     <string name="home_working_version">Версия: %d</string>
-    <string name="home_superuser_count">Суперпользователи: %d</string>
+    <string name="home_superuser_count">Superusers: %d</string>
     <string name="home_module_count">Модули: %d</string>
     <string name="home_failure">Подпись KernelSU Next v2 не найдена в ядре! [!KSU_NEXT || != size/hash]</string>
     <string name="home_failure_tip">Попросите вашего разработчика ядра интегрировать KernelSU Next!</string>
@@ -27,13 +27,13 @@
     <string name="home_selinux_status">Статус SELinux</string>
     <string name="selinux_status_disabled">Отключен</string>
     <string name="selinux_status_enforcing">Принудительный</string>
-    <string name="selinux_status_permissive">Разрешительный</string>
+    <string name="selinux_status_permissive">Разрешен</string>
     <string name="selinux_status_unknown">Неизвестно</string>
-    <string name="superuser">Суперпользователь</string>
+    <string name="superuser">Superuser</string>
     <string name="module_failed_to_enable">Не удалось включить модуль: %s</string>
     <string name="module_failed_to_disable">Не удалось отключить модуль: %s</string>
     <string name="module_empty">Нет установленных модулей</string>
-    <string name="module">Модуль</string>
+    <string name="module">Модули</string>
     <string name="module_install_prompt_with_name">Вы хотите продолжить установку модуля %1$s?</string>
     <string name="module_sort_a_to_z">Сортировать (А-Я)</string>
     <string name="module_sort_z_to_a">Сортировать (Я-А)</string>
@@ -69,7 +69,7 @@
     <string name="home_magic_mount">Magic Mount</string>
     <string name="home_overlayfs_mount">OverlayFS</string>
     <string name="unavailable">Недоступно</string>
-    <string name="use_overlay_fs">Используйте OverlayFS (Бета)</string>
+    <string name="use_overlay_fs">Использовать OverlayFS (Бета)</string>
     <string name="use_overlay_fs_summary">Переключение между использованием OverlayFS и Magic Mount для системы монтирования KernelSU Next.</string>
     <string name="reboot_required">Требуется перезагрузка</string>
     <string name="reboot_message">Изменения вступят в силу после перезагрузки системы. Перезагрузить сейчас?</string>
@@ -108,7 +108,7 @@
     <string name="failed_to_update_app_profile">Не удалось обновить Профиль Приложения для %s</string>
     <string name="require_kernel_version">Текущая версия KernelSU Next %d слишком низкая для корректной работы менеджера. Пожалуйста, обновитесь до версии %d или выше!</string>
     <string name="settings_umount_modules_default">Отключать модули по умолчанию</string>
-    <string name="settings_umount_modules_default_summary">Глобальное значение по умолчанию для "Отключить модули" в профиле приложения. Если включено, это удалит все модификации системы модулями для приложений без установленного профиля.</string>
+    <string name="settings_umount_modules_default_summary">Глобальное значение по умолчанию для \"Отключить модули\" в профиле приложения. Если включено, это удалит все модификации системы модулями для приложений без установленного профиля.</string>
     <string name="settings_susfs_toggle">Скрыть хуки kprobe</string>
     <string name="settings_susfs_toggle_summary">Отключает хуки kprobe, созданные ksu, и вместо этого активирует встроенные некрючковые функции, реализующие ту же функциональность для неконечных ядер, которые не поддерживают kprobe.</string>
     <string name="profile_umount_modules_summary">Включение этой опции позволит KernelSU Next восстанавливать любые изменённые модулями файлы для этого приложения.</string>
