--- a/manager/app/src/main/res/values-tr/strings.xml
+++ b/manager/app/src/main/res/values-tr/strings.xml
@@ -26,8 +26,8 @@
     <string name="home_manager_version">Yönetici sürümü</string>
     <string name="home_selinux_status">SELinux durumu</string>
     <string name="selinux_status_disabled">Devre dışı</string>
-    <string name="selinux_status_enforcing">Zorlayıcı</string>
-    <string name="selinux_status_permissive">İzinli</string>
+    <string name="selinux_status_enforcing">Zorlanıyor (Enforcing)</string>
+    <string name="selinux_status_permissive">Serbest (Permissive)</string>
     <string name="selinux_status_unknown">Bilinmiyor</string>
     <string name="superuser">Süper Kullanıcı</string>
     <string name="module_failed_to_enable">Modül etkinleştirilemedi: %s</string>
@@ -44,10 +44,10 @@
     <string name="reboot">Yeniden Başlat</string>
     <string name="settings">Ayarlar</string>
     <string name="reboot_userspace">Yumuşak Yeniden Başlat</string>
-    <string name="reboot_recovery">Kurtarma Moduna Yeniden Başlat</string>
-    <string name="reboot_bootloader">Bootloader\'a Yeniden Başlat</string>
-    <string name="reboot_download">Download Moduna Yeniden Başlat</string>
-    <string name="reboot_edl">EDL Moduna Yeniden Başlat</string>
+    <string name="reboot_recovery">Kurtarma Modunda Yeniden Başlat</string>
+    <string name="reboot_bootloader">Bootloader\'da Yeniden Başlat</string>
+    <string name="reboot_download">Download Modunda Yeniden Başlat</string>
+    <string name="reboot_edl">EDL Modunda Yeniden Başlat</string>
     <string name="about">Hakkında</string>
     <string name="module_uninstall_confirm">%s modülünü kaldırmak istediğinizden emin misiniz?</string>
     <string name="module_uninstall_success">%s kaldırıldı</string>
@@ -66,17 +66,17 @@
     <string name="reboot_to_apply">Değişikliklerin etkili olması için yeniden başlatın</string>
     <string name="module_magisk_conflict">Modüller Magisk ile çakışma nedeniyle kullanılamıyor!</string>
     <string name="home_module_mount">Modül Sistemi</string>
-    <string name="home_magic_mount">Sihirli Montaj</string>
+    <string name="home_magic_mount">Magic Mount</string>
     <string name="home_overlayfs_mount">OverlayFS</string>
     <string name="unavailable">Kullanılamaz</string>
     <string name="use_overlay_fs">OverlayFS Kullan (Beta)</string>
-    <string name="use_overlay_fs_summary">KernelSU Next\'in montaj sistemi için OverlayFS ile Sihirli Montaj arasında geçiş yapın.</string>
+    <string name="use_overlay_fs_summary">KernelSU Next\'in Mount sistemi için OverlayFS ile Magic Mount arasında geçiş yapın.</string>
     <string name="reboot_required">Yeniden Başlatma Gerekiyor</string>
     <string name="reboot_message">Değişiklikler sistem yeniden başlatıldıktan sonra etkili olacaktır. Şimdi yeniden başlatmak istiyor musunuz?</string>
-    <string name="module_restore">Modülü Geri Yükle</string>
-    <string name="module_restore_message">Modülleri son yedekten geri yükleyin.</string>
-    <string name="module_backup">Modülü Yedekle</string>
-    <string name="module_backup_message">Şu anda yüklü modülleri yedekleyin.</string>
+    <string name="module_restore">Modülleri Geri Yükle</string>
+    <string name="module_restore_message">Modülleri son yedekten geri yükler.</string>
+    <string name="module_backup">Modülleri Yedekle</string>
+    <string name="module_backup_message">Şu anda yüklü olan modülleri yedekler.</string>
     <string name="warning">Uyarı</string>
     <string name="warning_message">Bu özellik hâlâ beta aşamasında ve geliştirilme sürecinde. Lütfen devam etmeden önce modüllerinizi yedeklediğinizden emin olun. Yalnızca bu özelliğin potansiyel risklerini anlıyorsanız kullanın. Dikkatli olun.</string>
     <string name="proceed">Devam Et</string>
@@ -88,8 +88,8 @@
     <string name="home_experimental_kernelsu">⚠️ Deneysel Geliştirme Uyarısı!</string>
     <string name="home_experimental_kernelsu_repo">127.0.0.1</string>
     <string name="home_experimental_kernelsu_body">KernelSU Next resmi olmayan bir sürümdür ve her zaman aktif deneysel geliştirme altındadır. Stabilite, performans veya güvenilirlik garantisi verilmez.</string>
-    <string name="home_experimental_kernelsu_body_point_1"> • Kendi riskinizle kullanın: çökme, beklenmeyen davranış veya sistem sorunları olabilir.</string>
-    <string name="home_experimental_kernelsu_body_point_2"> • Garanti yok: geliştiriciler, bunun kullanımı sonucu oluşabilecek veri kaybı, sistem hasarı veya diğer sonuçlardan sorumlu değildir.</string>
+    <string name="home_experimental_kernelsu_body_point_1"> • Risk aldığınızı bilerek kullanın: Çökme, beklenmeyen davranış veya sistem sorunları olabilir.</string>
+    <string name="home_experimental_kernelsu_body_point_2"> • Garanti verilmez: geliştiriciler, bunun kullanımı sonucu oluşabilecek veri kaybı, sistem hasarı veya diğer sonuçlardan sorumlu değildir.</string>
     <string name="home_experimental_kernelsu_body_point_3"> • Test amaçlıdır: yalnızca riskleri anlayan ve sorun giderme konusunda rahat olan kullanıcılar için tasarlanmıştır.</string>
     <string name="about_source_code"><![CDATA[Kaynak kodu şu adreste görüntüleyin: %1$s]]></string>
     <string name="profile" translatable="false">Uygulama Profili</string>
@@ -97,32 +97,32 @@
     <string name="profile_template">Şablon</string>
     <string name="profile_custom">Özel</string>
     <string name="profile_name">Profil Adı</string>
-    <string name="profile_namespace">Montaj Namespace\'i</string>
-    <string name="profile_namespace_inherited">Miras Alınmış</string>
-    <string name="profile_namespace_global">Global</string>
+    <string name="profile_namespace">Ad Alanını Bağla</string>
+    <string name="profile_namespace_inherited">Kalıtsal</string>
+    <string name="profile_namespace_global">Küresel</string>
     <string name="profile_namespace_individual">Bireysel</string>
     <string name="profile_groups">Gruplar</string>
-    <string name="profile_capabilities">Yetenekler</string>
+    <string name="profile_capabilities">Yetkinlikler</string>
     <string name="profile_selinux_context">SELinux Bağlamı</string>
-    <string name="profile_umount_modules">Modülleri Çıkart</string>
-    <string name="failed_to_update_app_profile">Uygulama Profili güncellenemedi: %s</string>
+    <string name="profile_umount_modules">Modüllerin Bağlantısını kes</string>
+    <string name="failed_to_update_app_profile">%s için uygulama profili güncellenemedi.</string>
     <string name="require_kernel_version">Mevcut KernelSU Next sürümü %d, yöneticinin düzgün çalışması için çok düşük. Lütfen sürümü %d veya daha yüksek bir sürüme yükseltin!</string>
-    <string name="settings_umount_modules_default">Varsayılan olarak modülleri çıkart</string>
-    <string name="settings_umount_modules_default_summary">Uygulama Profili için \"Modülleri Çıkart\"ın küresel varsayılan değeri. Etkinleştirilirse, bir profili olmayan uygulamalar için sistemdeki tüm modül değişikliklerini kaldırır.</string>
+    <string name="settings_umount_modules_default">Varsayılan olarak modüllerin bağlantısını kes</string>
+    <string name="settings_umount_modules_default_summary">Uygulama profilindeki \"Modüllerin bağlantısını kes\" seçeneği için varsayılan değer. Etkinleştirilirse, profil ayarı yapılmamış uygulamalar için modüllerin sistemde yaptığı tüm değişiklikler kaldırılacaktır.</string>
     <string name="settings_susfs_toggle">Kprobe kancalarını gizle</string>
     <string name="settings_susfs_toggle_summary">Kprobe kancalarını devre dışı bırakır ve bunun yerine gömülü olmayan kancaları etkinleştirir. Bu, kprobe\'yi desteklemeyen bir çekirdek için uygulanacak aynı işlevselliği sağlar.</string>
-    <string name="profile_umount_modules_summary">Bu seçeneği etkinleştirmek, KernelSU Next\'in bu uygulama için modüller tarafından değiştirilmiş herhangi bir dosyayı geri yüklemesine olanak tanır.</string>
-    <string name="profile_selinux_domain">Alan</string>
+    <string name="profile_umount_modules_summary">Bu seçeneği etkinleştirmek, KernelSU Next\'in bu uygulama için modüller tarafından değiştirilmiş herhangi bir dosyayı geri yüklemesini sağlar.</string>
+    <string name="profile_selinux_domain">İsim Alanı</string>
     <string name="profile_selinux_rules">Kurallar</string>
     <string name="module_update">Güncelle</string>
     <string name="module_downloading">Modül indiriliyor: %s</string>
     <string name="module_start_downloading">İndirme başlatılıyor: %s</string>
     <string name="new_version_available">Yeni sürüm %s mevcut, güncellemek için tıklayın.</string>
-    <string name="launch_app">Başlat</string>
+    <string name="launch_app">Uygulamayı başlat</string>
     <string name="close">Kapat</string>
-    <string name="force_stop_app">Uygulamayı zorla durdur</string>
-    <string name="restart_app">Yeniden Başlat</string>
-    <string name="failed_to_update_sepolicy">SELinux kuralları güncellenemedi: %s</string>
+    <string name="force_stop_app">Uygulamayı durmaya zorla</string>
+    <string name="restart_app">Uygulamayı yeniden başlat</string>
+    <string name="failed_to_update_sepolicy">%s için SELinux kuralları güncellenemedi.</string>
     <string name="module_changelog">Değişiklik Günlüğü</string>
     <string name="settings_profile_template">Uygulama Profili Şablonu</string>
     <string name="settings_profile_template_summary">Yerel ve çevrimiçi Uygulama Profili şablonlarını yönetin</string>
@@ -130,7 +130,7 @@
     <string name="app_profile_template_edit">Şablonu düzenle</string>
     <string name="app_profile_template_id">ID</string>
     <string name="app_profile_template_id_invalid">Geçersiz şablon ID\'si</string>
-    <string name="app_profile_template_name">Ad</string>
+    <string name="app_profile_template_name">İsim</string>
     <string name="app_profile_template_description">Açıklama</string>
     <string name="app_profile_template_save">Kaydet</string>
     <string name="app_profile_template_delete">Sil</string>
@@ -145,14 +145,14 @@
     <string name="app_profile_template_sync">Çevrimiçi şablonları senkronize et</string>
     <string name="app_profile_template_save_failed">Şablon kaydedilemedi</string>
     <string name="app_profile_template_import_empty">Pano boş!</string>
-    <string name="module_changelog_failed">Değişiklik günlüğü alınamadı: %s</string>
+    <string name="module_changelog_failed">%s için değişiklik günlüğü alınamadı.</string>
     <string name="settings_check_update">Güncellemeleri kontrol et</string>
-    <string name="settings_check_update_summary">Uygulamayı açarken otomatik olarak güncellemeleri kontrol et.</string>
+    <string name="settings_check_update_summary">Başlangıçta otomatik olarak güncellemeleri kontrol et.</string>
     <string name="grant_root_failed">Root yetkisi verilemedi!</string>
     <string name="action">Eylem</string>
     <string name="open">Aç</string>
     <string name="enable_web_debugging">WebView hata ayıklamayı etkinleştir</string>
-    <string name="enable_web_debugging_summary">WebUI\'yi hata ayıklamak için kullanılabilir. Lütfen yalnızca gerektiğinde etkinleştirin.</string>
+    <string name="enable_web_debugging_summary">WebUI\'da hata ayıklamak için kullanılabilir. Lütfen yalnızca gerektiğinde etkinleştirin.</string>
     <string name="direct_install">Doğrudan yükleme (Önerilen)</string>
     <string name="select_file">Bir dosya seç</string>
     <string name="install_inactive_slot">Pasif bölüme yükle (OTA sonrası)</string>
@@ -160,15 +160,15 @@
     <string name="install_next">İleri</string>
     <string name="select_file_tip">%1$s bölüm görüntüsü önerilir</string>
     <string name="select_kmi">KMI seç</string>
-    <string name="shrink_sparse_image">Seyrek görüntüyü küçült</string>
-    <string name="shrink_sparse_image_message">Modülün bulunduğu seyrek görüntüyü gerçek boyutuna yeniden boyutlandırın. Bunun modülün anormal çalışmasına neden olabileceğini unutmayın, bu yüzden yalnızca gerektiğinde kullanın (Örneğin yedekleme için).</string>
+    <string name="shrink_sparse_image">Sparse imajını küçült</string>
+    <string name="shrink_sparse_image_message">Modüllerin bulunduğu sparse imajını gerçek boyutuna yeniden boyutlandırın. Bunun modüllerin anormal çalışmasına neden olabileceğini unutmayın, bu yüzden yalnızca gerektiğinde kullanın (Örneğin yedekleme için).</string>
     <string name="settings_uninstall">Kaldır</string>
     <string name="settings_uninstall_temporary">Geçici olarak kaldır</string>
     <string name="settings_uninstall_permanent">Kalıcı olarak kaldır</string>
     <string name="settings_restore_stock_image">Stok görüntüyü geri yükle</string>
     <string name="settings_uninstall_temporary_message">KernelSU Next\'i geçici olarak kaldırın, bir sonraki yeniden başlatmadan sonra orijinal duruma geri döner.</string>
-    <string name="settings_uninstall_permanent_message">KernelSU Next\'i (Root ve tüm modüller) tamamen ve kalıcı olarak kaldırıyorsunuz.</string>
-    <string name="settings_restore_stock_image_message">Stok fabrika görüntüsünü geri yükleyin (Eğer bir yedek varsa), genellikle OTA\'dan önce kullanılır; KernelSU Next\'i kaldırmanız gerekiyorsa lütfen \"Kalıcı olarak kaldır\" seçeneğini kullanın.</string>
+    <string name="settings_uninstall_permanent_message">KernelSU Next\'i (Root ve tüm modüller) tamamen ve kalıcı olarak kaldır.</string>
+    <string name="settings_restore_stock_image_message">Stok fabrika görüntüsünü geri yükle (Eğer bir yedek varsa), genellikle OTA\'dan önce kullanılır; KernelSU Next\'i kaldırmanız gerekiyorsa lütfen \"Kalıcı olarak kaldır\" seçeneğini kullanın.</string>
     <string name="flashing">Yükleniyor</string>
     <string name="flash_success">Yükleme başarılı</string>
     <string name="flash_failed">Yükleme başarısız</string>
