--- a/manager/app/src/main/res/values/strings.xml
+++ b/manager/app/src/main/res/values/strings.xml
@@ -20,8 +20,10 @@
     <string name="home_failure_tip">Ask your kernel developer to integrate KernelSU Next!</string>
     <string name="home_kernel">Kernel version</string>
     <string name="home_susfs">SuSFS: %s</string>
+    <string name="home_susfs_supported">Supported</string>
     <string name="home_susfs_version">SuSFS version</string>
     <string name="home_susfs_sus_su">SuS SU</string>
+    <string name="home_susfs_sus_su_mode">SuS SU mode: %s</string>
     <string name="home_android">Android version</string>
     <string name="home_manager_version">Manager version</string>
     <string name="home_selinux_status">SELinux status</string>
