--- a/manager/app/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/app/src/main/res/values-zh-rCN/strings.xml
@@ -20,8 +20,10 @@
     <string name="home_failure_tip">请让你的内核开发人员集成 KernelSU Next！</string>
     <string name="home_kernel">内核版本</string>
     <string name="home_susfs">SuSFS：%s</string>
+    <string name="home_susfs_supported">支持</string>
     <string name="home_susfs_version">SuSFS 版本</string>
     <string name="home_susfs_sus_su">SuS SU</string>
+    <string name="home_susfs_sus_su_mode">SuS SU 模式：%s</string>
     <string name="home_android">安卓版本</string>
     <string name="home_manager_version">管理器版本</string>
     <string name="home_selinux_status">SELinux 状态</string>
