--- a/manager/app/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/app/src/main/res/values-zh-rTW/strings.xml
@@ -13,12 +13,17 @@
     <string name="home_not_installed">未安裝</string>
     <string name="home_click_to_install">點擊安裝</string>
     <string name="home_working">工作中</string>
-    <string name="home_working_version">版本: %d</string>
-    <string name="home_superuser_count">超級使用者數: %d</string>
-    <string name="home_module_count">模組數: %d</string>
-    <string name="home_failure">內核中未找到 KernelSU Next v2 簽名！ [ !KSU_NEXT || != size/hash ]</string>
-    <string name="home_failure_tip">請讓你的內核開發人員整合 KernelSU Next！</string>
-    <string name="home_kernel">內核版本</string>
+    <string name="home_working_version">版本：%d</string>
+    <string name="home_superuser_count">超級使用者數：%d</string>
+    <string name="home_module_count">模組數：%d</string>
+    <string name="home_failure">核心中未找到 KernelSU Next v2 簽名！ [ !KSU_NEXT || != size/hash ]</string>
+    <string name="home_failure_tip">請讓你的核心開發人員整合 KernelSU Next！</string>
+    <string name="home_kernel">核心版本</string>
+    <string name="home_susfs">SuSFS：%s</string>
+    <string name="home_susfs_supported">支援</string>
+    <string name="home_susfs_version">SuSFS 版本</string>
+    <string name="home_susfs_sus_su">SuS SU</string>
+    <string name="home_susfs_sus_su_mode">SuS SU 模式：%s</string>
     <string name="home_android">Android 版本</string>
     <string name="home_manager_version">管理器版本</string>
     <string name="home_selinux_status">SELinux 狀態</string>
@@ -27,13 +32,13 @@
     <string name="selinux_status_permissive">寬容模式</string>
     <string name="selinux_status_unknown">未知</string>
     <string name="superuser">超級使用者</string>
-    <string name="module_failed_to_enable">無法啟用模組: %s</string>
-    <string name="module_failed_to_disable">無法禁用模組: %s</string>
+    <string name="module_failed_to_enable">無法啟用模組：%s</string>
+    <string name="module_failed_to_disable">無法禁用模組：%s</string>
     <string name="module_empty">沒有安裝模組</string>
     <string name="module">模組</string>
     <string name="module_install_prompt_with_name">是否要繼續安裝模組 %1$s ？</string>
-    <string name="module_sort_a_to_z">按 A - Z 排序</string>
-    <string name="module_sort_z_to_a">按 Z - A 排序</string>
+    <string name="module_sort_a_to_z">按 A－Z 排序</string>
+    <string name="module_sort_z_to_a">按 Z－A 排序</string>
     <string name="uninstall">卸載</string>
     <string name="restore">恢復</string>
     <string name="module_install">安裝</string>
@@ -48,13 +53,13 @@
     <string name="about">關於</string>
     <string name="module_uninstall_confirm">確定要卸載模組 %s 嗎？</string>
     <string name="module_uninstall_success">%s 已卸載</string>
-    <string name="module_uninstall_failed">卸載失敗: %s</string>
+    <string name="module_uninstall_failed">卸載失敗：%s</string>
     <string name="module_restore_confirm">你確定要恢復模組 %s 嗎？</string>
     <string name="module_restore_success">%s 已恢復</string>
-    <string name="module_restore_failed">恢復失敗: %s</string>
+    <string name="module_restore_failed">恢復失敗：%s</string>
     <string name="module_version">版本</string>
     <string name="module_author">作者</string>
-    <string name="module_overlay_fs_not_available">OverlayFS 被內核禁用，模組不可用。</string>
+    <string name="module_overlay_fs_not_available">OverlayFS 被核心禁用，模組不可用。</string>
     <string name="refresh">刷新</string>
     <string name="show_system_apps">顯示系統應用</string>
     <string name="hide_system_apps">隱藏系統應用</string>
@@ -66,7 +71,7 @@
     <string name="home_magic_mount">Magic Mount</string>
     <string name="home_overlayfs_mount">OverlayFS</string>
     <string name="unavailable">不可用</string>
-    <string name="use_overlay_fs">使用 OverlayFS (實驗性功能)</string>
+    <string name="use_overlay_fs">使用 OverlayFS（實驗性功能）</string>
     <string name="use_overlay_fs_summary">對於 KernelSU Next 的掛載系統，在使用 OverlayFS 和 Magic Mount 之間進行切換。</string>
     <string name="reboot_required">需要重啟</string>
     <string name="reboot_message">更改將在重啟系統後生效。您想現在重啟嗎？</string>
@@ -103,37 +108,37 @@
     <string name="profile_selinux_context">SELinux</string>
     <string name="profile_umount_modules">卸載模組</string>
     <string name="failed_to_update_app_profile">為 %s 更新 App Profile 失敗</string>
-    <string name="require_kernel_version">當前 KernelSU-Next 版本 %1$d 過低，管理器無法正常工作，請升級內核 KernelSU-Next 版本至 %2$d 或以上！</string>
+    <string name="require_kernel_version">當前 KernelSU Next 版本 %1$d 過低，管理器無法正常工作，請升級 KernelSU Next 版本至 %2$d 或以上！</string>
     <string name="settings_umount_modules_default">預設卸載模組</string>
     <string name="settings_umount_modules_default_summary">App Profile 中"卸載模組"的全域預設值，如果啟用，將會為沒有設定 Profile 的應用移除所有模組針對系統的修改。</string>
     <string name="settings_susfs_toggle">隱藏kprobe鉤子</string>
-    <string name="settings_susfs_toggle_summary">它禁用由ksu所建立的kprobe鉤子，並啟用非kprobe內聯鉤子，就如同無法支援kprobe的non-gki核心的實現方式。</string>
-    <string name="profile_umount_modules_summary">啟用後將允許 KernelSU-Next 為本應用還原被模組修改過的檔案。</string>
+    <string name="settings_susfs_toggle_summary">它禁用由 KSU 所建立的 Kprobe 鉤子，並啟用非 Kprobe 內聯鉤子，就如同無法支援 Kprobe 的非 GKI 核心的實現方式。</string>
+    <string name="profile_umount_modules_summary">啟用後將允許 KernelSU Next 為本應用還原被模組修改過的檔案。</string>
     <string name="profile_selinux_domain">域</string>
     <string name="profile_selinux_rules">規則</string>
     <string name="module_update">更新</string>
-    <string name="module_downloading">正在下載模組: %s</string>
-    <string name="module_start_downloading">開始下載: %s</string>
+    <string name="module_downloading">正在下載模組：%s</string>
+    <string name="module_start_downloading">開始下載：%s</string>
     <string name="new_version_available">發現新版本：%s，點擊升級。</string>
     <string name="launch_app">啟動</string>
     <string name="close">關閉</string>
     <string name="force_stop_app">強制停止</string>
     <string name="restart_app">重新啟動</string>
-    <string name="failed_to_update_sepolicy">為：%s 更新 SELinux 規則失敗</string>
+    <string name="failed_to_update_sepolicy">為 %s 更新 SELinux 規則失敗</string>
     <string name="module_changelog">更新日誌</string>
     <string name="settings_profile_template">App Profile 模板</string>
     <string name="settings_profile_template_summary">管理本地和線上的 App Profile 模板</string>
     <string name="app_profile_template_create">創建模板</string>
     <string name="app_profile_template_edit">編輯模板</string>
-    <string name="app_profile_template_id">模板 id</string>
-    <string name="app_profile_template_id_invalid">模板 id 不合法</string>
+    <string name="app_profile_template_id">模板 ID</string>
+    <string name="app_profile_template_id_invalid">模板 ID 不合法</string>
     <string name="app_profile_template_name">名字</string>
     <string name="app_profile_template_description">描述</string>
     <string name="app_profile_template_save">保存</string>
     <string name="app_profile_template_delete">刪除</string>
     <string name="app_profile_template_view">查看模板</string>
     <string name="app_profile_template_readonly">只讀</string>
-    <string name="app_profile_template_id_exist">模板 id 已存在！</string>
+    <string name="app_profile_template_id_exist">模板 ID 已存在！</string>
     <string name="app_profile_import_export">匯入/匯出</string>
     <string name="app_profile_import_from_clipboard">從剪貼簿匯入</string>
     <string name="app_profile_export_to_clipboard">匯出到剪貼簿</string>
@@ -142,10 +147,10 @@
     <string name="app_profile_template_sync">同步線上規則</string>
     <string name="app_profile_template_save_failed">模板保存失敗！</string>
     <string name="app_profile_template_import_empty">剪貼簿為空！</string>
-    <string name="module_changelog_failed">獲取更新日誌失敗: %s</string>
+    <string name="module_changelog_failed">獲取更新日誌失敗：%s</string>
     <string name="settings_check_update">檢查更新</string>
     <string name="settings_check_update_summary">在應用啟動後自動檢查是否有最新版。</string>
-    <string name="grant_root_failed">獲取 root 失敗！</string>
+    <string name="grant_root_failed">獲取 Root 失敗！</string>
     <string name="action">執行</string>
     <string name="open">打開</string>
     <string name="enable_web_debugging">啟用 WebView 偵錯</string>
@@ -163,13 +168,13 @@
     <string name="settings_uninstall_temporary">臨時卸載</string>
     <string name="settings_uninstall_permanent">永久卸載</string>
     <string name="settings_restore_stock_image">恢復原廠映像檔</string>
-    <string name="settings_uninstall_temporary_message">臨時卸載 KernelSU-Next，下次重啟後恢復。</string>
-    <string name="settings_uninstall_permanent_message">完全並永久移除 KernelSU-Next 和所有模組。</string>
+    <string name="settings_uninstall_temporary_message">臨時卸載 KernelSU Next，下次重啟後恢復。</string>
+    <string name="settings_uninstall_permanent_message">完全並永久移除 KernelSU Next 和所有模組。</string>
     <string name="settings_restore_stock_image_message">恢復原廠映像檔，一般在 OTA 前使用；如需卸載請使用“永久卸載”。</string>
     <string name="flashing">刷寫中</string>
     <string name="flash_success">刷寫成功</string>
     <string name="flash_failed">刷寫失敗</string>
-    <string name="selected_lkm">選擇的 LKM: %s</string>
+    <string name="selected_lkm">選擇的 LKM：%s</string>
     <string name="save_log">保存日誌</string>
     <string name="log_saved">日誌已保存</string>
     <string name="send_log">發送日誌</string>
