--- a/manager/app/src/main/res/values-fr/strings.xml
+++ b/manager/app/src/main/res/values-fr/strings.xml
@@ -20,8 +20,10 @@
     <string name="home_failure_tip">Demandez au développeur de votre kernel d\'intégrer KernelSU Next!</string>
     <string name="home_kernel">Version du kernel</string>
     <string name="home_susfs">SuSFS: %s</string>
+    <string name="home_susfs_supported">Pris en charge</string>
     <string name="home_susfs_version">Version de SuSFS</string>
     <string name="home_susfs_sus_su">SuS SU</string>
+    <string name="home_susfs_sus_su_mode">SuS SU mode: %s</string>
     <string name="home_android">Version d\'Android</string>
     <string name="home_manager_version">Version du manager</string>
     <string name="home_selinux_status">Statut SELinux</string>
