--- a/manager/app/src/main/res/values-in/strings.xml
+++ b/manager/app/src/main/res/values-in/strings.xml
@@ -19,6 +19,11 @@
     <string name="home_failure">Tandatangan KernelSU Next v2 tidak ditemukan pada kernel! [ !KSU_NEXT || != size/hash ]</string>
     <string name="home_failure_tip">Mohon agar para pengembang kernel anda mengintegrasikan KernelSU Next!</string>
     <string name="home_kernel">Kernel</string>
+    <string name="home_susfs">SuSFS: %s</string>
+    <string name="home_susfs_supported">Didukung</string>
+    <string name="home_susfs_version">Versi SuSFS</string>
+    <string name="home_susfs_sus_su">SuS SU</string>
+    <string name="home_susfs_sus_su_mode">SuS SU mode: %s</string>
     <string name="home_android">Versi Android</string>
     <string name="home_manager_version">Versi Manager</string>
     <string name="home_selinux_status">Status SELinux</string>
