--- a/manager/app/src/main/res/values-ko/strings.xml
+++ b/manager/app/src/main/res/values-ko/strings.xml
@@ -20,8 +20,10 @@
     <string name="home_failure_tip">커널 개발자에게 KernelSU Next 지원을 문의해주세요!</string>
     <string name="home_kernel">커널 버전</string>
     <string name="home_susfs">SuSFS: %s</string>
+    <string name="home_susfs_supported">지원됨</string>
     <string name="home_susfs_version">SuSFS 버전</string>
     <string name="home_susfs_sus_su">SuS SU</string>
+    <string name="home_susfs_sus_su_mode">SuS SU 모드: %s</string>
     <string name="home_android">안드로이드 버전</string>
     <string name="home_manager_version">매니저 버전</string>
     <string name="home_selinux_status">SELinux 상태</string>
