--- a/manager/app/src/main/res/values-pt-rBR/strings.xml
+++ b/manager/app/src/main/res/values-pt-rBR/strings.xml
@@ -20,8 +20,10 @@
     <string name="home_failure_tip">Peça ao seu desenvolvedor de kernel para integrar o KernelSU Next!</string>
     <string name="home_kernel">Versão do kernel</string>
     <string name="home_susfs">SuSFS: %s</string>
+    <string name="home_susfs_supported">Suportado</string>
     <string name="home_susfs_version">Versão do SuSFS</string>
     <string name="home_susfs_sus_su">SuS SU</string>
+    <string name="home_susfs_sus_su_mode">Modo SuS SU: %s</string>
     <string name="home_android">Versão do Android</string>
     <string name="home_manager_version">Versão do gerenciador</string>
     <string name="home_selinux_status">Status do SELinux</string>
