Update Russian `strings.xml` for https://github.com/rifsxd/KernelSU-Next/commit/72c230f01b3e406bb0b53516daa3f8463a39c321

--- a/manager/app/src/main/res/values-ru/strings.xml
+++ b/manager/app/src/main/res/values-ru/strings.xml
@@ -20,8 +20,10 @@
     <string name="home_failure_tip">Попросите вашего разработчика ядра интегрировать KernelSU Next!</string>
     <string name="home_kernel">Версия ядра</string>
     <string name="home_susfs">SuSFS: %s</string>
+    <string name="home_susfs_supported">Поддерживается</string>
     <string name="home_susfs_version">Версия SuSFS</string>
     <string name="home_susfs_sus_su">SuS SU</string>
+    <string name="home_susfs_sus_su_mode">Режим SuS SU: %s</string>
     <string name="home_android">Версия Android</string>
     <string name="home_manager_version">Версия менеджера</string>
     <string name="home_selinux_status">Статус SELinux</string>
