--- a/manager/app/src/main/res/values-th/strings.xml
+++ b/manager/app/src/main/res/values-th/strings.xml
@@ -20,8 +20,10 @@
     <string name="home_failure_tip">กรุณาถามผู้พัฒนาเคอร์เนลของคุณให้นํา KernelSU Next เข้าไปในเคอร์เนล</string>
     <string name="home_kernel">เวอร์ชันเคอร์เนล</string>
     <string name="home_susfs">SuSFS: %s</string>
+    <string name="home_susfs_supported">รองรับ</string>
     <string name="home_susfs_version">เวอร์ชัน SuSFS</string>
     <string name="home_susfs_sus_su">SuS SU</string>
+    <string name="home_susfs_sus_su_mode">โหมดของ SuS SU: %s</string>
     <string name="home_android">เวอร์ชันแอนดรอยด์</string>
     <string name="home_manager_version">เวอร์ชันตัวจัดการ</string>
     <string name="home_selinux_status">สถานะ SELinux</string>
