--- a/manager/app/src/main/res/values-tr/strings.xml
+++ b/manager/app/src/main/res/values-tr/strings.xml
@@ -20,8 +20,10 @@
     <string name="home_failure_tip">Çekirdek geliştiricinizden KernelSU Next\'i entegre etmesini isteyin!</string>
     <string name="home_kernel">Çekirdek sürümü</string>
     <string name="home_susfs">SuSFS: %s</string>
+    <string name="home_susfs_supported">Destekleniyor</string>
     <string name="home_susfs_version">SuSFS sürümü</string>
     <string name="home_susfs_sus_su">SuS SU</string>
+    <string name="home_susfs_sus_su_mode">SuS SU modu: %s</string>
     <string name="home_android">Android sürümü</string>
     <string name="home_manager_version">Yönetici sürümü</string>
     <string name="home_selinux_status">SELinux durumu</string>
