Minor changes for Chinese `strings.xml`

--- a/manager/app/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/app/src/main/res/values-zh-rCN/strings.xml
@@ -117,8 +117,8 @@
     <string name="profile_selinux_domain">域</string>
     <string name="profile_selinux_rules">规则</string>
     <string name="module_update">更新</string>
-    <string name="module_downloading">正在下载模块: %s</string>
-    <string name="module_start_downloading">开始下载: %s</string>
+    <string name="module_downloading">正在下载模块：%s</string>
+    <string name="module_start_downloading">开始下载：%s</string>
     <string name="new_version_available">发现新版本：%s，点击升级。</string>
     <string name="launch_app">启动</string>
     <string name="close">关闭</string>
@@ -147,10 +147,10 @@
     <string name="app_profile_template_sync">同步在线规则</string>
     <string name="app_profile_template_save_failed">模板保存失败！</string>
     <string name="app_profile_template_import_empty">剪贴板为空！</string>
-    <string name="module_changelog_failed">获取更新日志失败: %s</string>
+    <string name="module_changelog_failed">获取更新日志失败：%s</string>
     <string name="settings_check_update">检查更新</string>
     <string name="settings_check_update_summary">在应用启动后自动检查是否有最新版。</string>
-    <string name="grant_root_failed">获取 root 失败！</string>
+    <string name="grant_root_failed">获取 Root 失败！</string>
     <string name="action">执行</string>
     <string name="open">打开</string>
     <string name="enable_web_debugging">启用 WebView 调试</string>
