--- a/manager/app/src/main/res/values-ja/strings.xml
+++ b/manager/app/src/main/res/values-ja/strings.xml
@@ -14,8 +14,8 @@
     <string name="home_click_to_install">インストールをクリック</string>
     <string name="home_working">動作中</string>
     <string name="home_working_version">バージョン：%d</string>
-    <string name="home_superuser_count">スーパーユーザー数：%d</string>
-    <string name="home_module_count">モジュール数：%d</string>
+    <string name="home_superuser_count">スーパーユーザー：%d</string>
+    <string name="home_module_count">モジュール：%d</string>
     <string name="home_failure">カーネルに KernelSU Next V2 の署名が見つかりません！ [ !KSU_NEXT || != size/hash ]</string>
     <string name="home_failure_tip">カーネル開発者に KernelSU Next を統合してもらってください！</string>
     <string name="home_kernel">カーネルバージョン</string>
@@ -23,8 +23,8 @@
     <string name="home_susfs_version">SuSFS バージョン</string>
     <string name="home_susfs_sus_su">SuS SU</string>
     <string name="home_android">Android バージョン</string>
-    <string name="home_manager_version">マネージャーバージョン</string>
-    <string name="home_selinux_status">SELinux ステータス</string>
+    <string name="home_manager_version">アプリのバージョン</string>
+    <string name="home_selinux_status">SELinuxの状態</string>
     <string name="selinux_status_disabled">無効</string>
     <string name="selinux_status_enforcing">強制</string>
     <string name="selinux_status_permissive">許可モード</string>
@@ -32,27 +32,27 @@
     <string name="superuser">スーパーユーザー</string>
     <string name="module_failed_to_enable">モジュールを有効にできませんでした：%s</string>
     <string name="module_failed_to_disable">モジュールを無効にできませんでした：%s</string>
-    <string name="module_empty">インストールされたモジュールはありません</string>
+    <string name="module_empty">インストールされたモジュールはありません！</string>
     <string name="module">モジュール</string>
-    <string name="module_install_prompt_with_name">モジュール %1$s をインストールしてもよろしいですか？</string>
-    <string name="module_sort_a_to_z">A-Zでソート</string>
-    <string name="module_sort_z_to_a">Z-Aでソート</string>
+    <string name="module_install_prompt_with_name">%1$s モジュールをインストールしてもよろしいですか？</string>
+    <string name="module_sort_a_to_z">A-Zで並べ替え</string>
+    <string name="module_sort_z_to_a">Z-Aで並べ替え</string>
     <string name="uninstall">アンインストール</string>
     <string name="restore">復元</string>
     <string name="module_install">インストール</string>
     <string name="install">インストール</string>
     <string name="reboot">再起動</string>
     <string name="settings">設定</string>
-    <string name="reboot_userspace">ソフト再起動</string>
-    <string name="reboot_recovery">リカバリに再起動</string>
-    <string name="reboot_bootloader">ブートローダに再起動</string>
+    <string name="reboot_userspace">システムの再起動</string>
+    <string name="reboot_recovery">Recoveryに再起動</string>
+    <string name="reboot_bootloader">Bootloaderに再起動</string>
     <string name="reboot_download">ダウンロードに再起動</string>
-    <string name="reboot_edl">EDLに再起動</string>
-    <string name="about">について</string>
-    <string name="module_uninstall_confirm">モジュール %s をアンインストールしてもよろしいですか？</string>
+    <string name="reboot_edl">EDLへ再起動</string>
+    <string name="about">KernelSU Nextについて</string>
+    <string name="module_uninstall_confirm">%s モジュールをアンインストールしてもよろしいですか？</string>
     <string name="module_uninstall_success">%s がアンインストールされました</string>
     <string name="module_uninstall_failed">アンインストールに失敗しました：%s</string>
-    <string name="module_restore_confirm">モジュール %s を復元してもよろしいですか？</string>
+    <string name="module_restore_confirm">%s モジュールを復元してもよろしいですか？</string>
     <string name="module_restore_success">%s が復元されました</string>
     <string name="module_restore_failed">復元に失敗しました：%s</string>
     <string name="module_version">バージョン</string>
@@ -66,11 +66,11 @@
     <string name="reboot_to_apply">再起動して適用</string>
     <string name="module_magisk_conflict">Magiskとの競合により、モジュールは使用できません。</string>
     <string name="home_module_mount">モジュールシステム</string>
-    <string name="home_magic_mount">マジックマウント</string>
+    <string name="home_magic_mount">Magicマウント</string>
     <string name="home_overlayfs_mount">OverlayFS</string>
     <string name="unavailable">利用不可</string>
     <string name="use_overlay_fs">OverlayFSを使用（実験的）</string>
-    <string name="use_overlay_fs_summary">OverlayFSとマジックマウントの2つのマウントシステムの間で切り替えます。</string>
+    <string name="use_overlay_fs_summary">OverlayFSとMagicマウントの2つのマウントシステムの間で切り替えます。</string>
     <string name="reboot_required">再起動が必要です</string>
     <string name="reboot_message">変更はシステムを再起動した後に適用されます。今すぐ再起動しますか？</string>
     <string name="module_restore">モジュールを復元</string>
@@ -87,11 +87,11 @@
     <string name="home_next_kernelsu_body">実験的ブランチ。GitHubで確認してください！</string>
     <string name="home_experimental_kernelsu">⚠️ Experimental development warning!</string>
     <string name="home_experimental_kernelsu_repo">127.0.0.1</string>
-    <string name="home_experimental_kernelsu_body">KernelSU Nextはサードパーティのバージョンで、積極的な実験開発を維持しています。このバージョンはそのまま使用され、安定性、パフォーマンス、信頼性は保証されません。</string>
+    <string name="home_experimental_kernelsu_body">KernelSU Nextはサードパーティのバージョンで、積極的な実験開発を維持しています。このバージョンでは、安定性、パフォーマンス、信頼性は保証されません。</string>
     <string name="home_experimental_kernelsu_body_point_1"> • リスクは自己責任：クラッシュ、予期しない動作、またはシステムの故障が発生する可能性があります。</string>
     <string name="home_experimental_kernelsu_body_point_2"> • 保証なし：開発者はデータの損失、システムの損傷などの問題に対して責任を負いません。</string>
     <string name="home_experimental_kernelsu_body_point_3"> • テスト専用：このバージョンはリスクを理解し、問題を簡単に解決できるユーザー向けです。</string>
-    <string name="about_source_code"><![CDATA[ %1$s でソースコードを確認]]></string>
+    <string name="about_source_code"><![CDATA[ %1$s でソースコードを表示]]></string>
     <string name="profile" translatable="false">アプリプロファイル</string>
     <string name="profile_default">デフォルト</string>
     <string name="profile_template">テンプレート</string>
@@ -108,7 +108,7 @@
     <string name="failed_to_update_app_profile">%s のアプリプロファイルの更新に失敗しました</string>
     <string name="require_kernel_version">現在の KernelSU Nextバージョン %1$d は低すぎるため、マネージャーは正常に動作しません。KernelSU Nextバージョンを %2$d 以上にアップグレードしてください！</string>
     <string name="settings_umount_modules_default">デフォルトのモジュールアンマウント</string>
-    <string name="settings_umount_modules_default_summary">アプリプロファイルの「モジュールをアンマウント」のグローバルデフォルト値。これを有効にすると、プロファイルが設定されていないアプリのすべてのモジュールに対するシステムの変更が削除されます。</string>
+    <string name="settings_umount_modules_default_summary">アプリプロファイル内の「モジュールのアンマウント」がデフォルトでオンになります。 有効にするとモジュールによるものを含め、プロファイルが設定されていないアプリすべてのシステム変更が削除されます。</string>
     <string name="settings_susfs_toggle">Kprobeフックを非表示</string>
     <string name="settings_susfs_toggle_summary">KSUによって作成された Kprobeフックを無効にし、非Kprobeインラインフックを代わりに使用します。これはKprobeをサポートしていない非GKIカーネルに似た方法です。</string>
     <string name="profile_umount_modules_summary">有効にすると、KernelSU Next がこのアプリのモジュールによって変更されたファイルを復元できるようになります。</string>
